Add OpenVSX extension links prominently on homepage and docs, fix extension icons, reduce doc page title spacing

--- a/docs-site/content/docs/index.mdx
+++ b/docs-site/content/docs/index.mdx
@@ -64,6 +64,10 @@ Here's how MCPflare protects against a common attack:
 
 ## Getting Started
 
+Install the extension for your editor:
+- **[VS Code Marketplace](https://marketplace.visualstudio.com/items?itemName=forgedapps.mcpflare)** - Install for Visual Studio Code
+- **[Open VSX Registry](https://open-vsx.org/extension/forgedapps/mcpflare)** - Install for Cursor, VSCodium, and other Open VSX-compatible editors
+
 <Cards>
   <Card 
     title="VS Code Extension" 
