--- a/docs-site/content/docs/vscode-extension.mdx
+++ b/docs-site/content/docs/vscode-extension.mdx
@@ -6,6 +6,12 @@ description: Configure MCPflare using the VS Code extension interface.
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Step, Steps } from 'fumadocs-ui/components/steps';
 
+## Installation
+
+Install the MCPflare extension from:
+- **[VS Code Marketplace](https://marketplace.visualstudio.com/items?itemName=forgedapps.mcpflare)** - For Visual Studio Code
+- **[Open VSX Registry](https://open-vsx.org/extension/forgedapps/mcpflare)** - For Cursor, VSCodium, and other Open VSX-compatible editors
+
 ## Features
 
 - **Auto-Discovery**: Automatically detects MCP servers from Claude Code, Cursor, and GitHub Copilot configurations
